<resources>
    <string name="app_name">Zenmap</string>
    <string name="action_settings">Settings</string>

    <!-- New scan dialogs -->

    <string name="new_scan">New Scan</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="scan_type">Scan type</string>

    <!-- Network scan dialog -->

    <string name="network_scan_title">Network scan</string>
    <string-array name="network_scan_types">
        <item>@string/host_discovery</item>
        <item>@string/host_ext_discovery</item>
        <item>@string/host_service_discovery</item>
        <item>@string/host_os_discovery</item>
        <item>@string/host_os_service_discovery</item>
    </string-array>

    <string name="host_discovery">Host discovery</string>
    <string name="host_ext_discovery">Extended host discovery</string>
    <string name="host_service_discovery">Services discovery</string>
    <string name="host_os_discovery">Operative system discovery</string>
    <string name="host_os_service_discovery">Operative system + service discovery</string>

    <string name="network_target">Target network</string>
    <string name="network_target_hint">192.168.0.0/24</string>

    <!-- Network scans -->
    <string name="network_scan_result">%d detected hosts up</string>

    <!-- Hosts scans -->
    <string name="host_scan_result">%d detected services</string>

    <!-- Host scan dialog -->

    <string name="host_scan_title">Host scan</string>
    <string-array name="host_scan_types">
        <item>@string/regular_scan</item>
        <item>@string/os_scan</item>
        <item>@string/os_service_scan</item>
        <item>@string/intense_scan</item>
        <item>@string/intense_scan_all_tcp_ports</item>
    </string-array>

    <string name="regular_scan">Regular scan</string>
    <string name="os_scan">Operative System scan</string>
    <string name="os_service_scan">Operative System + Services scan</string>
    <string name="intense_scan">Intense scan</string>
    <string name="intense_scan_all_tcp_ports">Intense scan, all TCP ports</string>

    <string name="host_target">Target host</string>

    <!-- Scan types -->

    <array name="scan_types">
        <item name="net_scan">@string/net_scan</item>
        <item name="host_scan">@string/host_scan</item>
    </array>

    <string name="net_scan">Network scan</string>
    <string name="host_scan">Host scan</string>

    <!-- Scan details -->

    <string name="service_title">%1$s - %2$s</string>
    <string name="service_subtitle">Service is %1$s</string>

    <string name="host_subtitle">Host is %1$s</string>

    <!-- Scan options -->

    <!-- Host scan options -->
    <string name="version_opts">--version</string>
    <string name="regular_scan_opts">-sV</string>
    <string name="os_scan_opts">-O</string>
    <string name="os_service_opts">-O -sV</string>
    <string name="intense_scan_opts">-A -T4</string>
    <string name="intense_scan_all_tcp_opts">-p 1-65535 -A -T4</string>
    <!-- Network scan options -->
    <string name="host_discovery_opts">-sP --reason</string>
    <string name="host_service_discovery_opts">-sV --reason</string>
    <string name="host_os_discovery_opts">-O --reason</string>
    <string name="host_os_service_discovery_opts">-O -sV --reason</string>

    <!-- Misc options -->
    <string name="xml_opt">-oX -</string>

    <!-- Activities -->
    <string name="settings_activity_title">Settings</string>
    <string name="title_activity_scan_detail">ScanDetailActivity</string>

    <!-- Preferences -->
    <string name="nmap_version_preference">Nmap version</string>
    <string name="nmap_version_summary">
        If you fill a nmap version here it will be used instead of
        the lastest available version.\n
        Input it as <b>nmap-X.XX</b>
    </string>
    <string name="scan_lan_at_startup">scan_lan_at_startup</string>
    <string name="scan_lan_at_startup_preference">Scan LAN at startup</string>
    <string name="scan_lan_at_startup_summary">
        Enabling this option will launch a scan for the LAN you are connected to
        each time the application opens.
    </string>
    <string name="nmapbin_version">nmap</string>
    <string name="nmap_binary_path">NMAP_BINARY_PATH</string>

    <string name="run_always_as_root">always_scan_as_root</string>
    <string name="run_always_as_root_preference">Scan always as root</string>
    <string name="run_always_as_root_summary">
        Scanning as root may yield additional results like MAC addresses and vendors for
        discovered hosts.
    </string>

    <!-- Dialogs -->

    <string name="dlg_ask2download">
        Nmap binary not found.
        This is required for this application to work.
        Would you like to download it?
    </string>
    <string name="dlg_ask2download_yes">Download</string>
    <string name="dlg_ask2download_no">Cancel and exit</string>
    <string name="dlg_progress_title_download">Download binaries</string>
    <string name="toast_dowload_binary_error">Binary download failed</string>
    <string name="toast_download_binary_ok">Binary download succeeded</string>
    <string name="dlg_ask2downloaddata">Additional data will be downloaded to enable additional features. Would you like to proceed?</string>
    <string name="dlg_ask2deletedata">Would you like to delete the downloaded data?</string>
    <string name="dlg_ask2delete_yes">Yes</string>
    <string name="dlg_ask2delete_no">No</string>
    <string name="toast_data_extraction_ok">Binary extraction successful</string>
    <string name="info_binary_ok">Binary is all set</string>
    <string name="info_binary_not_ok">Binary is erroneous.</string>
    <string name="dlg_progress_title_extraction">Extracting</string>

    <!-- Scan results -->
    <string name="scan_done">Scan %1$s has finished</string>
    <string name="run_alert">Scan is running</string>
    <string name="scan_running">Scan for %1$s is running</string>
    <string name="scan_failed">The scan failed. If this problem persists please create an issue on the Github repo.</string>
    <string name="scan_deleted">Scan has been deleted</string>
    <string name="scan_details">Scanning for details</string>
    <string name="host_down">Host appears to be down</string>
    <string name="maybe_host_down">Scan failed. Maybe host is down?</string>
    <string name="elapsed_seconds">%1$.2f seconds</string>
    <string name="no_scan_notice">
        There are currently <b>no</b> finished scans.\n
        To start a new scan hit the <b>+</b> button on the lower right.\n
        When a scan finishes it will be shown here.
    </string>

    <!-- Misc -->

    <string name="services">Services</string>
    <string name="discover">Discover</string>
    <string name="target_title">Target</string>
    <string name="start_time_title">Start time</string>
    <string name="end_time_title">End time</string>
    <string name="elapsed_time_title">Elapsed time</string>
    <string name="menu_delete">Delete</string>
    <string name="scan_name">Name</string>
    <string name="empty_notice">No results</string>
    <string name="no_services">No services found</string>

    <string name="default_version_url">https://s3.amazonaws.com/nmap-dl/nmap-android-ui</string>
    <string name="default_update_url">https://github.com/kost/nmap-android/releases/download</string>
    <string name="summary_title">Summary</string>
    <string name="os">Operative system</string>
    <string name="hostname">Host name</string>
    <string name="mac">MAC address</string>
    <string name="mac_vendor">NIC manufacturer</string>
    <string name="undo">UNDO</string>
    <string name="view">VIEW</string>
    <string name="dismiss">dismiss</string>
    <string name="port">Port</string>
    <string name="protocol">Protocol</string>
    <string name="service_version">Service version</string>
    <string name="service">Service</string>
    <string name="status">Service status</string>
    <string name="status_reason">Service status reason</string>
    <string name="check_vulnerabiities">Check for vulnerabilities</string>
    <string name="title_activity_host_detail">HostDetailActivity</string>
    <string name="host_address">Address</string>
    <string name="unknown">Unknown</string>

</resources>
