<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/host_general_properties"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/host_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/PropertyName" />

        <TextView
            android:id="@+id/host_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/PropertyValue"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/host_mac_title"
            android:text="@string/mac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/PropertyName" />

        <TextView
            android:id="@+id/host_mac"
            android:layout_below="@id/host_mac_title"
            android:text="@string/unknown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/PropertyValue"/>

        <Button
            android:id="@+id/host_mac_discover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/discover"
            android:background="@color/transparent"
            android:textColor="@color/colorAccent"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/host_mac_vendor_title"
            android:text="@string/mac_vendor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/PropertyName" />

        <TextView
            android:id="@+id/host_mac_vendor"
            android:layout_below="@id/host_mac_vendor_title"
            android:text="@string/unknown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/PropertyValue"/>

        <Button
            android:id="@+id/host_mac_vendor_discover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/discover"
            android:background="@color/transparent"
            android:textColor="@color/colorAccent"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/host_os_title"
            android:text="@string/os"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/PropertyName" />

        <TextView
            android:id="@+id/host_os"
            android:layout_below="@id/host_os_title"
            android:text="@string/unknown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/PropertyValue"/>

        <Button
            android:id="@+id/host_os_discover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/discover"
            android:background="@color/transparent"
            android:textColor="@color/colorAccent"/>

    </RelativeLayout>

</LinearLayout>